# MODERN-QRD

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  ROADMAP.md  SECURITY.md  SPECIFICATION.md
.github/copilot/: system_prompt.md
.github/workflows/: structure.yml
core/qrd-core/: Cargo.toml
core/qrd-core/benches/: schema_benchmark.rs
core/qrd-core/examples/: schema_footer.rs
core/qrd-core/src/: column_chunk.rs  file_footer.rs  file_header.rs  lib.rs  row_group.rs
core/qrd-core/src/columnar/: mod.rs
core/qrd-core/src/compression/: mod.rs
core/qrd-core/src/ecc/: mod.rs
core/qrd-core/src/encoding/: mod.rs
core/qrd-core/src/encryption/: mod.rs
core/qrd-core/src/error/: mod.rs
core/qrd-core/src/integrity/: mod.rs
core/qrd-core/src/reader/: mod.rs
core/qrd-core/src/schema/: mod.rs
core/qrd-core/src/writer/: mod.rs
core/qrd-ffi/: Cargo.toml
core/qrd-ffi/include/: qrd.h
core/qrd-ffi/src/: lib.rs
core/qrd-wasm/: Cargo.toml
core/qrd-wasm/src/: lib.rs
tests/unit/: Cargo.toml  build.rs
tests/unit/src/: lib.rs
tests/unit/tests/: column_chunk.rs  columnar.rs  compliance.rs  compression.rs  compression_generated.rs  e2e_reader_column_chunk.rs  e2e_reader_footer.rs  e2e_writer.rs  ecc.rs  encoding.rs  encoding_generated.rs  encryption.rs  encryption_generated.rs  error_taxonomy.rs  file_footer.rs  file_header.rs  golden_vectors.rs  integrity.rs  integrity_generated.rs  reader.rs  regression.rs  row_group.rs  schema_footer.rs  writer.rs
