[package]
name = "qrd-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
crc32fast.workspace = true
sha2.workspace = true
thiserror.workspace = true
zstd.workspace = true
flate2.workspace = true
aes-gcm.workspace = true
aes.workspace = true
hkdf.workspace = true
rand.workspace = true
reed-solomon-erasure.workspace = true
